--- a/app/views/widgets/_form.html.erb
+++ b/app/views/widgets/_form.html.erb
@@ -13,33 +13,56 @@
 
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :name, placeholder: 'widget1', class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <small>This won't be shown to your visitors.</small>
   </div>
 
   <div class="my-5">
     <%= form.label :welcome_message %>
-    <%= form.text_field :welcome_message, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :welcome_message,  placeholder: 'send me a note', class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :background_color %>
-    <%= form.text_field :background_color, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.label :background_color %><br>
+    <%= form.color_field :background_color %>
   </div>
 
   <div class="my-5">
-    <%= form.label :shape %>
-    <%= form.text_field :shape, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.label :shape %><br>
+
+    <span onclick="setShape(this)" class="circle mr-2 cursor-pointer <%= maybe_preselect(widget, 'circle') %>" data-shape="circle"></span>
+    <span onclick="setShape(this)" class="square mr-2 cursor-pointer <%= maybe_preselect(widget, 'square') %>" data-shape="square"></span>
+    <span onclick="setShape(this)" class="rectangle mr-2 cursor-pointer <%= maybe_preselect(widget, 'rectangle') %>" data-shape="rectangle"></span>
+
+    <script type="text/javascript">
+      function setShape(el) {
+        resetSelectedShape();
+
+        let shape = el.dataset.shape;
+        el.classList.add('shape-selected');
+        document.getElementById('widget_shape').value = shape;
+      }
+
+      function resetSelectedShape() {
+        Array.from(document.getElementsByClassName('shape-selected')).forEach(function(el) {
+          el.classList.remove('shape-selected');
+        })
+      }
+    </script>
+    <%= form.text_field :shape, type: "hidden" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :enables %>
-    <%= form.check_box :enables, class: "block mt-2 h-5 w-5" %>
+    <%= form.label :avatar %>
+    <%= form.file_field :avatar %>
   </div>
 
   <div class="my-5">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.label :enabled %>
+    <%= form.check_box :enabled, class: "block mt-2 h-5 w-5" %>
   </div>
+
+
 
   <div class="inline">
     <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
