--- a/app/views/widgets/new.html.erb
+++ b/app/views/widgets/new.html.erb
@@ -1,7 +1,13 @@
 <div class="mx-auto md:w-2/3 w-full">
   <h1 class="font-bold text-4xl">New widget</h1>
 
-  <%= render "form", widget: @widget %>
+  <div class="flex">
+    <div class="basis-1/2">
+      <%= render "form", widget: @widget %>
+    </div>
+    <div class="basis-1/2">
+      Live preview here
+    </div>
+  </div>
 
-  <%= link_to 'Back to widgets', widgets_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
