setting up js widget on home page

--- a/app/views/snippet/_form.html.erb
+++ b/app/views/snippet/_form.html.erb
@@ -1,4 +1,4 @@
-<div id="qwidget_widget" class="max-w-xs border border-2 border-black rounded-md">
+<div id="qwidget_widget" class="max-w-xs border border-2 border-black rounded-md absolute bottom-5 right-10">
   <form class="new_message" id="new_message" action="<%= ENV['base_url'] %>/messages" accept-charset="UTF-8" method="post">
     <div class="pb-7 pt-4 flex items-center gap-x-2 bg-brand-blue">
       <div class="pl-2">
