made widget message sendable

--- a/app/views/snippet/_form.html.erb
+++ b/app/views/snippet/_form.html.erb
@@ -1,4 +1,4 @@
-<div id="qwidget_widget" class="max-w-xs border border-2 border-black rounded-md absolute bottom-5 right-10">
+<div id="qwidget_widget" class="w-72  z-999 border border-2 border-black rounded-md absolute bottom-5 right-10">
   <form class="new_message" id="new_message" action="<%= ENV['base_url'] %>/messages" accept-charset="UTF-8" method="post">
     <div class="pb-7 pt-4 flex items-center gap-x-2 bg-brand-blue">
       <div class="pl-2">
@@ -9,7 +9,7 @@
       </div>
     </div>
 
-    <div class="px-4 pt-4 pb-0">
+    <div class="bg-white px-4 pt-4 pb-0">
       <div class="grid grid-cols-1 gap-y-3 gap-x-4 sm:grid-cols-6">
         <div class="sm:col-span-6">
           <label for="message_name" class="block text-sm font-medium text-gray-700">Name</label>
