--- a/app/views/snippet/show.js.erb
+++ b/app/views/snippet/show.js.erb
@@ -4,20 +4,29 @@ var QwidgetWidget  = {
   circleStyles: { backgroundColor: 'black', height: '50px', width: '50px', borderRadius: '50%', position: 'absolute', bottom: '0px', right: '5px', cursor: 'pointer' },
   welcome_message: 'send me a note',
   formHTML: '<%= j render "form" %>',
+  cssStyles: "<%= asset_url('tailwind.css') %>",
 
   init: function() {
     console.log('initialized working');
     this.showIcon();
+    this.plantCss();
+  },
+
+  plantCss: function() {
+    let stylesheet = document.createElement('link');
+    stylesheet.rel = 'stylesheet';
+    stylesheet.href = this.cssStyles;
+    document.head.append(stylesheet);
   },
 
   showForm: function () {
     document.body.insertAdjacentHTML('beforeend', this.formHTML);
-    hideIcon();
+    this.hideIcon();
   },
 
   hideForm: function () {
     document.getElementById('qwidget_widget').remove();
-    showIcon();
+    this.showIcon();
   },
 
   hideIcon: function () {
