override ruby submit method and use fetch to send async post request

--- a/app/views/snippet/show.js.erb
+++ b/app/views/snippet/show.js.erb
@@ -21,6 +21,7 @@ var QwidgetWidget  = {
 
   showForm: function () {
     document.body.insertAdjacentHTML('beforeend', this.formHTML);
+    document.getElementById('new_message').addEventListener('submit', this.submitForm);
     this.hideIcon();
   },
 
@@ -45,6 +46,19 @@ var QwidgetWidget  = {
 
     document.body.append(icon);
   },
+
+  submitForm: function (e) {
+    e.preventDefault();
+    let form = e.target;
+    fetch(form.action, {
+      method: 'POST',
+      body: new FormData(form)
+    }).then((response) => {
+      console.log('success response received! you hide the form and show a thank you message now.');
+
+      QwidgetWidget.hideForm();
+    })
+  }
 
 }
 
