--- a/app/views/snippet/_form.html.erb
+++ b/app/views/snippet/_form.html.erb
@@ -1,12 +1,20 @@
 <div id="qwidget_widget" class="w-72  z-999 border border-2 border-black rounded-md absolute bottom-5 right-10">
   <form class="new_message" id="new_message" action="<%= ENV['base_url'] %>/messages" accept-charset="UTF-8" method="post">
+
+    <div id="exit" class="absolute right-2 top-1 white-font">
+      X
+    </div>
     <div class="pb-7 pt-4 flex items-center gap-x-2 bg-brand-blue">
+
+
+
       <div class="pl-2">
         <img src="https://via.placeholder.com/60x60" class="rounded-full" alt="">
       </div>
       <div class="">
         welcome message here
       </div>
+
     </div>
 
     <div class="bg-white px-4 pt-4 pb-0">
