set up color and shape reflecting on front end

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,4 +62,4 @@
 </div>
 
 
-<script src="http://localhost:3000/snippet.js"></script>
+<script src='http://localhost:3000/snippet.js?client_id=9685527d4c'></script>
