--- a/app/views/snippet/_form.html.erb
+++ b/app/views/snippet/_form.html.erb
@@ -1,10 +1,10 @@
 <div id="qwidget_widget" class="w-72  z-999 border border-2 border-black rounded-md absolute bottom-5 right-10">
   <form class="new_message" id="new_message" action="<%= ENV['base_url'] %>/messages" accept-charset="UTF-8" method="post">
-
+    <input type="text" hidden name="client_id" id="client_id" value="">
     <div id="exit" class="absolute right-2 top-1 white-font">
       X
     </div>
-    <div class="pb-7 pt-4 flex items-center gap-x-2 bg-brand-blue">
+    <div class="pb-7 pt-4 flex items-center gap-x-2 blog_text_widget_background_color">
 
 
 
@@ -12,7 +12,7 @@
         <img src="https://via.placeholder.com/60x60" class="rounded-full" alt="">
       </div>
       <div class="">
-        welcome message here
+        <span id="blog_text_widget_welcome_message"></span>
       </div>
 
     </div>
@@ -44,7 +44,7 @@
 
     <div class="pt-5">
       <div class="flex justify-end">
-        <button type="submit" class="w-full inline-flex justify-center rounded-t-md rounded-b-sm border border-transparent bg-brand-blue hover:bg-brand-blue-dark py-2 px-4 text-sm font-medium text-white shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Send</button>
+        <button type="submit" class="w-full inline-flex justify-center rounded-t-md rounded-b-sm border border-transparent blog_text_widget_background_color hover:bg-brand-blue-dark py-2 px-4 text-sm font-medium text-white shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Send</button>
       </div>
     </div>
   </form>
