making preview widget work

--- a/app/views/snippet/_form.html.erb
+++ b/app/views/snippet/_form.html.erb
@@ -1,4 +1,4 @@
-<div id="qwidget_widget" class="w-72  z-999 border border-2 border-black rounded-md absolute bottom-5 right-10">
+<div id="qwidget_widget" class="w-72  z-999 border border-2 border-black rounded-md absolute ">
   <form class="new_message" id="new_message" action="<%= ENV['base_url'] %>/messages" accept-charset="UTF-8" method="post">
     <input type="text" hidden name="client_id" id="client_id" value="">
     <div id="exit" class="absolute right-2 top-1 white-font">
