--- a/app/views/widgets/new.html.erb
+++ b/app/views/widgets/new.html.erb
@@ -1,13 +1,40 @@
 <div class="mx-auto md:w-2/3 w-full">
   <h1 class="font-bold text-4xl">New widget</h1>
 
-  <div class="flex">
+  <div class="flex gap-8">
     <div class="basis-1/2">
       <%= render "form", widget: @widget %>
     </div>
     <div class="basis-1/2">
-      Live preview here
+      <%= render ("snippet/form") %>
     </div>
   </div>
 
 </div>
+
+<script type="text/javascript">
+  document.getElementById('widget_welcome_message').addEventListener('keyup', function(e) {
+    document.getElementById('blog_text_widget_welcome_message').innerText = e.target.value
+  })
+
+  function previewBackgroundColor (colorPicker) {
+    let coloredItems = document.getElementsByClassName('blog_text_widget_background_color');
+    Array.from(coloredItems).forEach(function(el) {
+      el.style.backgroundColor = colorPicker.value;
+    });
+  }
+
+  function disableForm () {
+    document.getElementById('message_name').disabled = true;
+    document.getElementById('message_email').disabled = true;
+    document.getElementById('message_content').disabled = true;
+  }
+
+  function setDefaults () {
+    document.getElementById('widget_background_color').value = '#26B55D';
+    previewBackgroundColor(document.getElementById('widget_background_color'));
+  }
+
+  setDefaults();
+  disableForm();
+</script>
