--- a/app/views/snippet/_form.html.erb
+++ b/app/views/snippet/_form.html.erb
@@ -9,7 +9,7 @@
 
 
       <div class="pl-2">
-        <img src="https://via.placeholder.com/60x60" class="rounded-full" alt="">
+        <img id="blog_text_widget_avatar" src="" class="w-14 rounded-full" alt="">
       </div>
       <div class="">
         <span id="blog_text_widget_welcome_message"></span>
