--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,8 +3,11 @@
     <div class="sm:flex-auto">
       <h1 class="text-base font-semibold leading-6 text-gray-900">Messages</h1>
       <p class="mt-2 text-sm text-gray-700">list of messages</p>
+      <div class="text-right">
+        <a href="<%= messages_path(format: 'csv') %>" class="underline text-brand-blue">Export CSV ></a>
+      </div>
     </div>
-    
+
   </div>
   <div class="mt-8 flow-root">
     <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
