--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "shared/heading", locals: { title: 'Dashboard', description: '' } %>
+<%= render partial: "shared/heading", locals: { title: 'Dashboard', tagline: '' } %>
