--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="px-4 sm:px-6 lg:px-8">
   <div class="sm:flex sm:items-center">
     <div class="sm:flex-auto">
-      <h1 class="text-base font-semibold leading-6 text-gray-900">Messages</h1>
+      <h1 class="text-base font-semibold leading-6 text-gray-900">Messages <%= "(#{@messages.count})" %></h1>
       <p class="mt-2 text-sm text-gray-700">list of messages</p>
       <div class="text-right">
         <a href="<%= messages_path(format: 'csv') %>" class="underline text-brand-blue">Export CSV ></a>
