adding font color

--- a/app/views/snippet/_form.html.erb
+++ b/app/views/snippet/_form.html.erb
@@ -4,7 +4,7 @@
     <div id="exit" class="absolute right-2 top-1 white-font">
       X
     </div>
-    <div class="pb-7 pt-4 flex items-center gap-x-2 blog_text_widget_background_color">
+    <div class="pb-7 pt-4 flex items-center gap-x-2 blog_text_widget_background_color blog_text_widget_font_color">
 
 
 
