--- a/app/views/snippet/show.js.erb
+++ b/app/views/snippet/show.js.erb
@@ -13,6 +13,7 @@ var QwidgetWidget  = {
   cssStyles: "<%= asset_url('tailwind.css') %>",
   thanksHTML: '<div id="thanks-note">Thanks!</div>',
   shape: '<%= @widget.shape %>',
+  fontColor: '<%= @widget.font_color %>',
 
 
   init: function() {
@@ -50,6 +51,12 @@ var QwidgetWidget  = {
     Array.from(coloredItems).forEach(function(el) {
       el.style.backgroundColor = self.backgroundColor;
     });
+    let fontColoredItems = document.getElementsByClassName('blog_text_widget_font_color');
+    Array.from(fontColoredItems).forEach(function(el) {
+      el.style.color = self.fontColor;
+    });
+    
+    
 
     <% if @widget.avatar.present? %>
       let avatarSrc = '<%= Rails.application.routes.url_helpers.url_for(@widget.avatar) %>';
