--- a/app/views/widgets/new.html.erb
+++ b/app/views/widgets/new.html.erb
@@ -24,6 +24,15 @@
     });
   }
 
+
+
+  function previewFontColor (colorPicker) {
+    let fontColoredItems = document.getElementsByClassName('blog_text_widget_font_color');
+    Array.from(fontColoredItems).forEach(function(el) {
+      el.style.color = colorPicker.value;
+    });
+  }
+
   function disableForm () {
     document.getElementById('message_name').disabled = true;
     document.getElementById('message_email').disabled = true;
@@ -33,6 +42,8 @@
   function setDefaults () {
     document.getElementById('widget_background_color').value = '#26B55D';
     previewBackgroundColor(document.getElementById('widget_background_color'));
+    document.getElementById('widget_font_color').value = '#FFFFFF';
+    previewFontColor(document.getElementById('widget_font_color'));
   }
 
   setDefaults();
